oculus section small fix

--- a/styles/oculus.css
+++ b/styles/oculus.css
@@ -25,7 +25,7 @@
     color: #ffffff;
 }
 .oculus-section-gray-background{
-    padding: 150px 0;
+    padding: 130px 0;
     background: #0303039f;
 }
 .oculus-section-gray-background:hover{
